Changed default language to english, added russian translation file

--- a/adjmatrdialog.ui
+++ b/adjmatrdialog.ui
@@ -11,7 +11,10 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Матрица смежности</string>
+   <string>Adjacency matrix</string>
+  </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
